[package]
name = "mirin"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
actix-files = "0.6.2"
notify = "5.0.0"
log = "0.4.17"
env_logger = "0.10.0"
walkdir = "2.3.2"
toml = "0.5.10"
serde = { version = "1.0.151", features = ["derive"] }
console = "0.15.2"
serde_json = "1.0.91"
actix-cors = "0.6.4"